Updated Web Profile files with Resume for Srivatsan Varadarajan

--- a/index.html
+++ b/index.html
@@ -1,1 +1,304 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Material Resume</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
+    </noscript>
+    <link href="css/font-awesome/css/all.min.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/mdb.min.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/aos.css?ver=1.2.1" rel="stylesheet">
+    <link href="css/main.css?ver=1.2.1" rel="stylesheet">
+    <noscript>
+      <style type="text/css">
+        [data-aos] {
+            opacity: 1 !important;
+            transform: translate(0) scale(1) !important;
+        }
+      </style>
+    </noscript>
+  </head>
+  <body class="bg-light" id="top">
+    <header class="d-print-none">
+      <div class="container text-center text-lg-left">
+        <div class="pt-4 clearfix">
+          <h1 class="site-title mb-0">Srivatsan Varadarajan</h1>
+          <div class="site-nav"> 
+            <nav role="navigation">
+              <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link" href="#about" title="About"><span class="menu-title">About</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#experience" title="Experience"><span class="menu-title">Experience</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span class="menu-title">Education</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span class="menu-title">Contact</span></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="page-content">
+      <div class="container">
+<div class="resume-container">
+  <div class="shadow-1-strong bg-white my-5" id="intro">
+    <div class="bg-info text-white">
+      <div class="cover bg-image"><img src="images/header-background.jpg"/>
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(0px);">
+          <div class="text-center p-5">
+            <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatar.jpg" width="160" height="160"/></div>
+            <div class="header-bio mt-3">
+              <div data-aos="zoom-in" data-aos-delay="0">
+                <h2 class="h1">Srivatsan Varadarajan, PhD</h2>
+                <p>Technology Fellow | Scientist | Innovator | Engineering Leader</p>
+              </div>
+              <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
+                <nav role="navigation">
+                  <ul class="nav justify-content-center">
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/srivatsan-varadarajan/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/vatsan.v" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="d-print-none">
+				<a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="docs/srivatsan_varadarajan_cv.pdf" data-aos="fade-right" data-aos-delay="700">Download CV (long)</a>
+				<a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="docs/srivatsan_varadarajan_resume.pdf" data-aos="fade-right" data-aos-delay="700">Download Resume (short)</a>
+				<a class="btn btn-info btn-lg shadow-sm mt-1" href="#contact" data-aos="fade-left" data-aos-delay="700">Contact Me</a>
+			  </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5" id="about">
+    <div class="about-section">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="h2 fw-light mb-4">About Me</h2>
+          <p>Hello! I’m Srivatsan Varadarajan. I am a <strong>research scientist</strong> with an enduring passion for engineering large, complex, safety & security critical cyber-physical systems and also a <strong>technologist</strong> at heart that derives great satisfaction from maturing relevant solutions from concept to prototype and eventually transitioning them to fielded products that need to adapt real-time to deployment situations with practical constraints.</p>
+		  <p>I am currently a Technical Engineering Fellow associated with Safe Autonomous Systems group within Advanced Technology which supports Unmanned Aerial Systems (UAS) and Urban Air Mobility (UAM) side of Honeywell’s Aerospace business.</p>
+        </div>
+        <div class="col-md-5 offset-lg-1">
+          <div class="row mt-2">
+            <h2 class="h2 fw-light mb-4">Bio</h2>
+            <div class="col-sm-5">
+              <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
+            </div>
+            <div class="col-sm-7">
+              <div class="pb-2"><a class="nav-link" href="mailto:vatsan@gmail.com" title="Email">vatsan@gmail.com</a></div>
+            </div>
+            <div class="col-sm-5">
+              <div class="pb-2 fw-bolder"><i class="fas fa-external-link-square-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Web</div>
+            </div>
+            <div class="col-sm-7">
+              <div class="pb-2"><a class="nav-link" href="https://vatsan1729.github.io" title="Website">vatsan1729.github.io</a></div>
+            </div>
+            <div class="col-sm-5">
+              <div class="pb-2 fw-bolder"><i class="fab fa-linkedin pe-2 text-muted" style="width:24px;opacity:0.85;"></i> LinkedIn Profile</div>
+            </div>
+            <div class="col-sm-7">
+              <div class="pb-2"><a class="nav-link" href="https://www.linkedin.com/in/srivatsan-varadarajan/" title="LinkedIn">srivatsan-varadarajan</a></div>
+            </div>
+            <div class="col-sm-5">
+              <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
+            </div>
+            <div class="col-sm-7">
+              <div class="pb-2">+1-612-275-3931</div>
+            </div>
+            <div class="col-sm-5">
+              <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
+            </div>
+            <div class="col-sm-7">
+              <div class="pb-2">14709 Pinto Ln, Rockville, Maryland, 20850, U.S.A</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
+    <div class="work-experience-section">
+      <h2 class="h2 fw-light mb-4">Work Experience</h2>
+      <div class="timeline">
+        <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">Honeywell Aerospace <span class="text-muted h6">as Engineering Fellow (current), Staff Scientist, Principal Scientist, Senior Research Scientist</span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">2001 - Present</div>
+            <div>Oversee research and development projects in the core areas of certifiable platforms and assurance technologies for autonomous avionics systems.
+			     Drive strategy initiatives to help shape product features anticipating marketplace/customer needs, develop technology roadmaps for Safe Autonomous Systems group within Honeywell Advanced Technology which supports Unmanned Aerial Systems (UAS) and Urban Air Mobility (UAM) side of the Aerospace business.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">IBM Almaden Research Center <span class="text-muted h6">as Intern </span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">Summer 1998</div>
+            <div>Designing and devloping fault tolerance in the Distributed Shared RAID cluster.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">Bell Labs, Lucent Technologies <span class="text-muted h6">as Intern </span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">Summer 1996</div>
+            <div>Developed a capacity management tool for their switching software, especially determining load on their 5ESS switches.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="600">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">Fujitsu, ICIM <span class="text-muted h6">as Software Engineer </span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">1994 - 1995</div>
+            <div>Developed system and application software for the International Software Division of the indian subsidiary of Fujitsu, Japan.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5" id="education">
+    <div class="education-section">
+      <h2 class="h2 fw-light mb-4">Education</h2>
+      <div class="timeline">
+        <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">Ph.D. <span class="text-muted h6">in Computer Science and Engineering, University of Minnesota</span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">1996 - 2004</div>
+            <div>Dissertation: On End-to-End Quality of Service (QoS) Support and Resource Management for Continuous Media Delivery over Distributed Networks.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">M.S. <span class="text-muted h6">in Mathematics, University of Minnesota</span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">2002 - 2003</div>
+            <div>Specialization in Combinatorics, Stochastics and Measure Theory.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="400">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">M.S. <span class="text-muted h6">in Computer Science and Engineering, University of Minnesota</span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">1996 - 1999</div>
+            <div>Thesis: Error Spreading Protocol: A Perception-Driven Approach to Error Handling in Continuous Media Streaming.</div>
+          </div>
+        </div>
+        <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="600">
+          <div class="timeline-head px-4 pt-3">
+            <div class="h5">Masters <span class="text-muted h6"> in Management Studies (M.M.S.), Birla Institute of Technology and Science (BITS), Pilani, India</span></div>
+          </div>
+          <div class="timeline-body px-4 pb-4">
+            <div class="text-muted text-small mb-3">1996 - 1999</div>
+            <div>Specialization in Information Systems.</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="portfolio">
+    <div class="portfolio-section">
+      <h2 class="h2 fw-light mb-4">Portfolio</h2>
+      <div class="row g-0">
+        <div class="col-md-6"><a href="https://scholar.google.com/citations?hl=en&user=NgbNdYsAAAAJ&view_op=list_works&sortby=pubdate"><img class="img-fluid" src="https://scholar.google.com/intl/en/scholar/images/2x/scholar_logo_64dp.png" width="500" height="300"/></a></div>
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
+          <div class="m-4 mt-md-2">
+            <p class="text-teal text-small">Access on Google Scholar</p>
+            <h3>Patents and Publications</h3>
+            <p class="text-muted">Over 25 Conference and Journal papers. Over 25 Patents awarded or pending. </p>
+          </div>
+        </div>
+      </div>
+      <div class="row g-0 portfolio-reverse">
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
+          <div class="m-4 mt-md-2 text-end">
+            <p class="text-teal text-small">Awards</p>
+            <h3>Honors</h3>
+            <p class="text-muted">NASA Johnson Space Center Group Achievement Award for performing the Exploration Flight Test 1 (EFT-1) end-to-end between MCC at Johnson Space Center and the Lockheed Martin Integrated Test Lab in Denver. 
+			Honeywell Aerospace Technical Achievement and Outstanding Engineer Awards for outstanding technical innovations, creativity and contributions to Honeywell Aerospace’s growth and success.</p>
+          </div>
+        </div>
+        <div class="col-md-6"><a href="https://www.nasa.gov/sites/default/files/721791main_OrionDecMAR2012revA.pdf"><img class="img-fluid" src="https://www.nasa.gov/sites/default/files/thumbnails/image/jsc2014e092600.jpg" width="800" height="500"/></a></div>
+      </div>
+      <div class="row g-0">
+        <div class="col-md-6"><a href="https://www.springerprofessional.de/en/requirements-driven-model-checking-and-test-generation-for-compr/22166930"><img class="img-fluid" src="https://nfm2022.caltech.edu/resources/nfm.jpg" width="250" height="150"/></a></div>
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
+          <div class="m-4 mt-md-2">
+            <p class="text-teal text-small">Training / Certifications / Standardization / Affiliations / Presentations</p>
+            <h3>Professional Activities</h3>
+            <p class="text-muted">Lead principal investigator and/or program manager for projects funded by DARPA, NASA, ONR, DHS and AFRL. Six Sigma Green Belt certified, Leadership Skills & Strategic Marketing trainings. Time Triggered Ethernet (TTE) standardization as <a href="https://www.sae.org/standards/content/as6802">SAE AS6802</a>. Program committee and track chair for AI/ML in Integrated Communications, Navigation, and Surveillance <a href="https://i-cns.org/icns-2021/2021-agenda/technical-program/">(ICNS) conference </a>.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5" id="contact">
+    <div class="contant-section">
+      <h2 class="h2 fw-light text mb-4">Contact</h2>
+      <div class="row mb-4">
+        <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
+          <div class="mt-1">
+            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +1-612-275-3931</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> vatsan@gmail.com</div>
+          </div>
+          <div class="mt-5 d-print-none"><form action="https://formspree.io/vatsan@gmail.com"
+    method="POST">
+  <div class="form-outline mb-4">
+    <input type="text" id="name" class="form-control" required/>
+    <label class="form-label" for="name">Name</label>
+  </div>
+  <div class="form-outline mb-4">
+    <input type="email" id="email" class="form-control" required/>
+    <label class="form-label" for="email">Email address</label>
+  </div>
+  <div class="form-outline mb-4">
+    <textarea class="form-control" style="resize: none;" id="message" rows="4" required></textarea>
+    <label class="form-label" for="message">Message</label>
+  </div>
+  <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
+</form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div></div>
+    </div>
+    <footer class="pt-4 pb-4 text-muted text-center d-print-none">
+      <div class="container">
+        <div class="my-3">
+          <div class="h4">Srivatsan Varadarajan Web Profile</div>
+        </div>
+        <div class="text-small">
+          <div class="mb-1">&copy; Material Resume. All rights reserved.</div>
+          <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+		  <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/91352029@N04/10612779775">Abstract Backgrounds</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/91352029@N04">NichoDesign</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=openverse">CC BY-NC-SA 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
+        </div>
+      </div>
+    </footer>
+    <script src="scripts/mdb.min.js?ver=1.2.1"></script>
+    <script src="scripts/aos.js?ver=1.2.1"></script>
+    <script src="scripts/main.js?ver=1.2.1"></script>
+  </body>
+</html>
