--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
             <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +1-612-275-3931</div>
             <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> vatsan@gmail.com</div>
           </div>
-          <div class="mt-5 d-print-none"><form action="https://formspree.io/vatsan@gmail.com"
-    method="POST">
+          <div class="mt-5 d-print-none"><form action="https://formspree.io/f/xpzbggvp" method="POST">
   <div class="form-outline mb-4">
     <input type="text" id="name" class="form-control" required/>
     <label class="form-label" for="name">Name</label>
