--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@
           </div>
           <div class="mt-5 d-print-none"><form action="https://formspree.io/f/xpzbggvp" method="POST">
   <div class="form-outline mb-4">
-    <input type="text" id="name" class="form-control" required/>
+    <input type="text" id="name" name="name" class="form-control" required/>
     <label class="form-label" for="name">Name</label>
   </div>
   <div class="form-outline mb-4">
-    <input type="email" id="email" class="form-control" required/>
+    <input type="email" id="email" name="email" class="form-control" required/>
     <label class="form-label" for="email">Email address</label>
   </div>
   <div class="form-outline mb-4">
-    <textarea class="form-control" style="resize: none;" id="message" rows="4" required></textarea>
+    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4" required></textarea>
     <label class="form-label" for="message">Message</label>
   </div>
   <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
